--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,18 @@
     height: 100vh;
     width: 100vw;
 }
+
+ul, ol {
+    font-size: 2rem;
+
+    li {
+        margin-bottom: 1rem;
+    }
+}
+
+code {
+    background: rgba(255, 255, 255, 0.2);
+    padding: 0.2rem;
+    border-radius: 0.2rem;
+    font-size: 1.5rem;
+}
